--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 services:
   frontend:
-    build: ./frontend
-    # ports:
-    #   - "127.0.0.1:3000:3000"    # Next.js 前端
-    environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:3001
+    build:
+      context: ./frontend
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    expose:
+      - 3000
     depends_on:
       - backend-api
+    networks:
+      - dokploy-network
 
   backend-api:
     build: ./backend-api
-    # ports:
-    #   - "3001:3001"    # NestJS API
+    expose:
+      - 3001
     environment:
       - DB_SERVICE_HOST=backend-db
       - DB_SERVICE_PORT=3002
@@ -20,11 +23,19 @@ services:
     depends_on:
       - backend-db
       - otel-collector
+    networks:
+      - dokploy-network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.backend-db.rule=Host(`backend.dokploy.com`)
+      - traefik.http.routers.backend-db.entrypoints=web
+      - traefik.http.services.backend-db.loadbalancer.server.port=3001
+      
 
   backend-db:
     build: ./backend-db
-    # ports:
-    #   - "3002:3002"    # NestJS DB Service
+    expose:
+      - 3002
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/demo
       - OTEL_SERVICE_NAME=backend-db
@@ -32,6 +43,9 @@ services:
     depends_on:
       - mongodb
       - otel-collector
+    networks:
+      - dokploy-network
+      
 
   mongodb:
     image: mongo:latest
@@ -39,6 +53,9 @@ services:
     #   - "27017:27017"  # MongoDB
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - dokploy-network
+      
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:latest
@@ -50,6 +67,9 @@ services:
       # - "4317:4317"    # OTLP gRPC
     depends_on:
       - tempo
+    networks:
+      - dokploy-network
+      
 
   tempo:
     image: grafana/tempo:latest
@@ -58,9 +78,14 @@ services:
     volumes:
       - ./tempo.yaml:/etc/tempo.yaml
       - tempo_data:/var/tempo/data
+    expose:
+      - 3200
     # ports:
     #   - "3200:3200"    # Tempo HTTP
     #   - "4319:4317"    # Tempo OTLP gRPC
+    networks:
+      - dokploy-network
+      
 
   grafana:
     image: grafana/grafana:latest
@@ -72,8 +97,19 @@ services:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
-    # ports:
-    #   - "127.0.0.1:3100:3000"    # Grafana UI
+      - GF_SERVER_HTTP_PORT=8080
+    expose:
+      - 8080
+    networks:
+      - dokploy-network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.grafana.entrypoints=web
+      - traefik.http.services.grafana.loadbalancer.server.port=8080
+      
+networks:
+  dokploy-network:
+    external: true
 
 volumes:
   mongodb_data:
