--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,10 +41,9 @@ services:
       - DB_SERVICE_HOST=backend-db
       - DB_SERVICE_PORT=3002
       - OTEL_SERVICE_NAME=backend-api
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
     depends_on:
       - backend-db
-      - otel-collector
     networks:
       - dokploy-network
     labels:
@@ -62,10 +61,9 @@ services:
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/demo
       - OTEL_SERVICE_NAME=backend-db
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
     depends_on:
       - mongodb
-      - otel-collector
     networks:
       - dokploy-network
 
