--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,11 @@ FROM node:20-alpine AS development
 
 # Add build arguments
 ARG NEXT_PUBLIC_API_URL
+ARG OTEL_EXPORTER_OTLP_ENDPOINT
 
 # Set as environment variables
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV OTEL_EXPORTER_OTLP_ENDPOINT=$OTEL_EXPORTER_OTLP_ENDPOINT
 
 WORKDIR /app
 
