--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -2,9 +2,13 @@ receivers:
   otlp:
     protocols:
       http:
+        cors:
+          allowed_origins:
+            - https://*.test.com
+            - http://localhost:3000
+          max_age: 7200
         endpoint: "0.0.0.0:4318"
-      grpc:
-        endpoint: "0.0.0.0:4317"
+        compression_algorithms: ["", "gzip"]
 
 processors:
   batch:
